# douyin-mcp

./: .env.example  .gitignore  AGENT_HANDOFF.md  CONTRIBUTING.md  PLATFORM_COMPLIANCE.md  README.md  douyin-creator-mcp-PRD.md  douyin-creator-mcp.md  easy-install.ps1  pyproject.toml
.auto-flow/browser-channel-stage2-20260708/: context.md  execution-log-v1.md  execution-review-v1.md  final-summary.md  plan-review-v1.md  plan-v1.md  state.json
.auto-flow/browser-live-smoke-stage3-20260711/: context.md  execution-log-v1.md  execution-log-v2.md  execution-review-v1.md  execution-review-v2.md  final-summary.md  plan-review-v1.md  plan-v1.md  plan.md  state.json
.auto-flow/browser-session-stage1-20260708/: context.md  execution-log-v1.md  execution-review-v1.md  final-summary.md  plan-review-v1.md  plan-v1.md  state.json
.auto-flow/browser-structured-data-stage4-20260711/: context.md  execution-log-v1.md  execution-review-v1.md  final-summary.md  plan-review-v1.md  plan-v1.md  (+2 more)
docs/: agent-handoff.md  ai-install-guide.md  api-mapping.md  browser-session.md  implementation-status.md  install.md  limitations.md  oauth.md  project-structure.md  scopes.md  user-usability-closure-plan.md  user-usability-technical-feasibility-report.md
tests/: test_api_mapping.py  test_auth_service.py  test_browser_extractors.py  test_browser_service.py  test_browser_session.py  test_browser_smoke.py  test_browser_tools.py  test_cli.py  test_config.py  test_db_migrations.py  test_metrics.py  test_profile_lock.py  test_report_service.py  test_responses.py  test_server.py  test_token_store.py
(+40 files in other folders)
